Initial PWA files

--- a/compare-app.html
+++ b/compare-app.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defect Scanner - Compare</title>
+
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.css">
-    
+<title>Defect Scanner - Compare with Reference</title>
+ 
+<meta name="description" content="Detect defects by comparing a sample image against a perfect reference image. Ideal for quality control and finding subtle differences.">
+
+<meta property="og:title" content="Defect Scanner - Compare with Reference">
+<meta property="og:description" content="Compare a sample image with a perfect reference image to detect defects.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://digitalchaos68.github.io/AIimagescan/compare-app.html">
+<meta property="og:image" content="https://digitalchaos68.github.io/AIimagescan/image/compare-app-splash.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Defect Scanner - Compare with Reference">
+<meta name="twitter:description" content="Use AI to find defects by comparing two images side-by-side.">
+<meta name="twitter:image" content="https://digitalchaos68.github.io/AIimagescan/image/compare-app-splash.jpg">
+
+<link rel="canonical" href="https://digitalchaos68.github.io/AIimagescan/compare-app.html">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Defect Scanner",
+  "description": "AI-powered tool for comparing images to a reference to find defects.",
+  "applicationCategory": "Utilities",
+  "operatingSystem": "All",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "url": "https://digitalchaos68.github.io/AIimagescan/compare-app.html",
+  "logo": "https://digitalchaos68.github.io/AIimagescan/image/logo.png"
+}
+</script>    
     <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
 </head>
 <body>
