--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defect Scanner</title>
+
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.css">
+<title>Defect Scanner - AI Image Quality Control</title>
+ 
+<meta name="description" content="AI-powered image defect scanner. Choose from change-based or reference-based analysis to find flaws in your images. Fast, accurate, and easy to use.">
+
+<meta property="og:title" content="Defect Scanner - AI Image Quality Control">
+<meta property="og:description" content="AI-powered image defect scanner. Choose from change-based or reference-based analysis to find flaws in your images.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://digitalchaos68.github.io/AIimagescan/index.html">
+<meta property="og:image" content="https://digitalchaos68.github.io/AIimagescan/image/index-splash.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Defect Scanner - AI Image Quality Control">
+<meta name="twitter:description" content="Find and analyze defects in images using advanced AI algorithms.">
+<meta name="twitter:image" content="https://digitalchaos68.github.io/AIimagescan/image/index-splash.jpg">
+
+<link rel="canonical" href="https://digitalchaos68.github.io/AIimagescan/index.html">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Defect Scanner",
+  "description": "AI-powered image defect scanner for quality control and anomaly detection.",
+  "applicationCategory": "Utilities",
+  "operatingSystem": "All",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "url": "https://digitalchaos68.github.io/AIimagescan/index.html",
+  "logo": "https://digitalchaos68.github.io/AIimagescan/image/logo.png"
+}
+</script>    
 </head>
 <body>
     <div class="container">
@@ -13,6 +47,8 @@
             <button id="theme-toggle">Light/Dark Mode</button>
         </div>
         <h1>Defect Scanner</h1>
+    <img src="/image/index-splash.jpg" alt="Defect Scanner - AI Image Quality Control" style="width: 100%; height: auto; border-radius: 8px; margin: 20px 0;">
+
         <p>Select a defect detection method to begin.</p>
         
         <div class="selection-container">
