Feature: meta data

--- a/compare-app.html
+++ b/compare-app.html
@@ -47,6 +47,8 @@
         <button onclick="window.location.href='index.html'">Back to Main Menu</button>
         <h1>Defect Scanner</h1>
         <h2>Compare with Reference Image</h2>
+        <img src="image/compare-app-splash.jpg" alt="Defect Scanner - AI Image Quality Control" style="width: 100%; height: auto; border-radius: 8px; margin: 20px 0;">
+        
         <p>Upload a reference image (the good one) and a comparison image (the one to check for defects).</p>
 
         <div class="image-upload-container">
