--- a/main-app.html
+++ b/main-app.html
@@ -14,6 +14,8 @@
         <button onclick="window.location.href='index.html'">Back to Main Menu</button>
         <h1>Defect Scanner</h1>
         <h2>Based on Changes in Image</h2>
+        <img src="image/main-app-splash.jpg" alt="Defect Scanner - AI Image Quality Control" style="width: 100%; height: auto; border-radius: 8px; margin: 20px 0;">
+
         <p>Upload an image from your gallery or take a new photo to scan for defects.</p>
         
         <input type="file" id="imageInput" accept="image/*">
