--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <div class="toggle-container">
             <button id="theme-toggle">Light/Dark Mode</button>
         </div>
-        <h1>Defect Scanner</h1>
-        <img src="/image/index-splash.jpg" alt="Defect Scanner - AI Image Quality Control" style="width: 100%; height: auto; border-radius: 8px; margin: 20px 0;">
+        <h1>Defect Scanner </h1>
+
+        <img src="image/index-splash.jpg" alt="Defect Scanner - AI Image Quality Control" style="width: 100%; height: auto; border-radius: 8px; margin: 20px 0;">
 
         <p>Select a defect detection method to begin.</p>
         
