--- a/main-app.html
+++ b/main-app.html
@@ -91,7 +91,7 @@
         <h2 class="text-xl font-medium text-gray-600 dark:text-gray-400 mb-6">Based on Changes in Image</h2>
         
         <!-- Splash Image -->
-        <img src="https://placehold.co/1200x600/667eea/ffffff?text=Defect+Scanner" alt="Defect Scanner - AI Image Quality Control" class="w-full h-auto rounded-xl mb-6">
+        <img src="image/main-app-splash.jpg" alt="Defect Scanner - AI Image Quality Control" class="w-full h-auto rounded-xl mb-6">
         
         <p class="mb-4 text-center">
             Upload an image from your gallery or take a new photo to scan for defects.
